# yu-data

./: LICENSE  README.md  pyproject.toml
src/yu_data/: __init__.py  cli.py  scheduler_export.py
src/yu_data/obs/: __init__.py  catalog.py  client.py  curriculum.py  models.py  programs.py  text.py
src/yu_data/schedules/: __init__.py  summer_pdf.py
tests/: test_cli_smoke.py  test_curriculum.py  test_programs.py  test_scheduler_export.py  test_summer_pdf.py  test_text.py
tests/fixtures/: progCourses_en.html  progCourses_tr.html  summer_sample.txt  unitSelection_lis_en.html  unitSelection_lis_tr.html
